Rydd opp i rdist001-modulen før overgang til dokdistadmin sine rdist001-endepunkt